--- a/Stable/RazorEngineAllInOne/RazorEngineDemo/RazorEngineDemo.csproj
+++ b/Stable/RazorEngineAllInOne/RazorEngineDemo/RazorEngineDemo.csproj
@@ -53,9 +53,12 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RazorEngineDemo.cs" />
+    <Compile Include="RazorTemplateManager.cs" />
     <Compile Include="ViewModel\ReportModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Views\Web.config" />
     <None Include="Web.config" />
     <None Include="App.config" />
     <None Include="packages.config" />
